<resources>
    <string name="app_name">BiWF</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="personal_info_password">Password</string>
    <string name="log_out">Log out</string>
    <string name="tittle_text_devices">Devices</string>
    <string name="tittle_text_dashboard">Dashboard</string>
    <string name="tittle_text_account">Account</string>
    <string name="notification">Notification</string>
    <string name="forgot_password_activity">Forgot Password Activity</string>
    <string name="placeholder_text_1">1</string>
    <string name="biometric_prompt_title">Biometric login for BIWF</string>
    <string name="biometric_prompt_message">Log in using your biometric credential</string>
    <string name="cancel">Cancel</string>
    <string name="support">Support</string>
    <string name="call_us"><u>Call us at (123) 456-7890</u></string>
    <string name="unread_notification_count">%d</string>
    <string name="notification_screen_unread">Unread</string>
    <string name="notification_screen_mark_all_read">Mark All as Read</string>
    <string name="notification_screen_warning">Do you want to Clear all notification,
        Once cleared you will not get back ?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_notiifcation_title">Delete Notifications</string>
    <string name="read_notifications">Read Notifications</string>
    <string name="tap_to_view_details">Tap to view details</string>
    <string name="notification_details">Notification details</string>
    <string name="webpage_error">Error in Loading Page</string>
    <string name="change_installation_appointment">Change</string>
    <string name="cancel_installation_appointment">Cancel</string>
    <string name="welcome_msg">You’re signed up. Keep track of your installation status here on your Dashboard!</string>
    <string name="fiber_installation_status">Fiber installation status</string>
    <string name="service_appointment_status">Service appt. status</string>
    <string name="service_appointment_status_complete">Service complete</string>
    <string name="installation_scheduled">Installation has been scheduled</string>
    <string name="service_appointment_scheduled">appointment has been scheduled</string>
    <string name="text_time_details">Your appointment is between %1$s and %2$s</string>
    <string name="congratulations">Congratulations!</string>
    <string name="faq_topics">Frequently asked questions</string>
    <string name="troubleshooting">Troubleshooting</string>
    <string name="visit_website">Visit website</string>
    <string name="restart_modem">Restart modem</string>
    <string name="run_speed_test">Run speed test</string>
    <string name="last_speed_test">last speed test: \u0020</string>
    <string name="mbps_upload">Mbps \nupload</string>
    <string name="mbps_download">Mbps \ndownload</string>
    <string name="live_chat">Live chat</string>
    <string name="contact_us">Contact us</string>
    <string name="welcome_to_dashboard">Welcome to your Dashboard!</string>
    <string name="biometric_dialog_message">Do you want to enable biometrics for login as blazing fast as your WiFi?</string>
    <string name="dont_allow">Don\'t Allow</string>
    <string name="ok">OK</string>
    <string name="feedback_button_text">How are we doing? Leave us feedback</string>
    <string name="faq_subsection_helpful_videos">Helpful videos</string>
    <string name="frequently_asked_questions">Frequently asked questions</string>
    <string name="frequently_questions_cant_find">Can\'t find the answer to your question?</string>
    <string name="support_schedule_a_callback">Schedule a callback</string>
    <string name="modem_reboot_error_title">Modem restart incomplete.</string>
    <string name="modem_reboot_error_message">Please check that your modem is connected to power and try again.</string>
    <string name="modem_reboot_error_button_positive">Retry</string>
    <string name="modem_reboot_error_button_negative">Cancel</string>
    <string name="modem_reboot_success_title">Success!</string>
    <string name="modem_reboot_success_message">Your modem has been restarted. If you\'re still experiencing issues, please contact support.</string>
    <string name="modem_reboot_success_button">Close</string>
    <string name="restart">RESTART</string>
    <string name="restart_modem_confirmation_message">This can take up to 5 minutes. You can close the app while you wait if you want, and your modem will continue restarting in the background.</string>
    <string name="restart_modem_confirmation_title">Do you want to restart your modem?</string>
    <string name="speed_test_error_title">Error running speed test</string>
    <string name="speed_test_error_message">An error occurred while trying to run a speed test. Please try again later.</string>
    <string name="settings_preferences"><![CDATA[Settings & preferences]]></string>
    <string name="service_calls_description">I would like to receive calls and text messages about my CenturyLink services at the number provided</string>
    <string name="marketing_emails_description">I would like to receive emails about offers and marketing from CenturyLink at the email address provided</string>
    <string name="marketing_calls_description">I would like to receive calls and text messages about offers and marketing from CenturyLink at the number provided. I consent to the use of autodialers or artificial or prerecorded voice for the calls and text messages. </string>
    <string name="login_settings">Login settings</string>
    <string name="biometric_label">Use biometrics to login</string>
    <string name="communication_preferences">Communication preferences</string>
    <string name="service_calls_and_texts">Services calls and texts</string>
    <string name="marketing_emails">Marketing emails</string>
    <string name="marketing_calls_and_texts">Marketing calls and texts</string>
    <string name="payment_information">Payment information</string>
    <string name="next_payment_date">Next payment date:</string>
    <string name="personal_info">Personal info</string>
    <string name="hidden_password">•••••••••</string>
    <string name="cellphone">Cell phone:</string>
    <string name="home_phone">Home phone:</string>
    <string name="work_phone">Work phone:</string>
    <string name="service_address">Service address:</string>
    <string name="cancel_subscription_title">Cancel subscription</string>
    <string name="cancel_subscription_sub_header">Are you sure you want to cancel?</string>
    <string name="manage_subscription_content">When canceling service on any day
        other than the last day of your current subscription, all monthly rates, fees, and taxes
        will apply in full and payments received for unused service will not be prorated, refunded,
        or credited. Your current subscription ends on  %1$s.</string>
    <string name="continue_cancellation">Continue cancellation</string>
    <string name="text_header_cancel">CANCEL</string>
    <string name="schedule_callback">Schedule callback</string>
    <string name="visit_website_text">Need more help? Visit our self-diagnostic tool on our website for additional options.</string>
    <string name="content_description_holder">Content description Holder</string>
    <string name="live_chat_times">8:00am - 5:00pm MST</string>
    <string name="my_account">My Account</string>
    <string name="last_speed_test_fake_value">03/02/2020 at 8:52pm</string>
    <string name="fake_speed_test_download_speed">910</string>
    <string name="speed_test_upload_fake_speed">908</string>
    <string name="tel">tel:</string>
    <string name="info_call_back">Just let us know what you need and we’ll call you right back</string>
    <string name="reason_for_call_back"><font color="#503296" size="16"><b>Please give us more information about the help you need. </b></font><font color="#788791" size="12">(optional)</font></string>
    <string name="additional_information">Additional information</string>
    <string name="additional_info_title">Additional info</string>
    <string name="next">Next</string>
    <string name="call_us_now_at">Call us now at</string>
    <string name="done">DONE</string>
    <string name="select_time">Select time</string>
    <string name="contact_info">Contact info</string>
    <string name="select_time_heading">When would you like us to call? </string>
    <string name="next_available_time_label">Next available time</string>
    <string name="next_available_time_subtext">most people receive a call within 15 minutes</string>
    <string name="specific_callback_time_label">I want to pick a specific time</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="call_me">Call me</string>
    <string name="email_question_popup_heading">Why do you need my email?</string>
    <string name="email_question_popup_text">We ask for your email to ensure we can get in contact with you in the case that your phone number does not work or was entered incorrectly. </string>
    <string-array name="customer_care_options">
        <item>I want to know more about Fiber Internet</item>
        <item>I\'m having trouble signing up for Fiber Internet</item>
        <item>I want to know more about Instant Wifi</item>
        <item>I\'m having trouble signing up for Instant Wifi</item>
        <item>I can\'t sign into my account</item>
        <item>I have questions about my account</item>
        <item>I need something not listed here</item>
    </string-array>
    <string name="cancel_subscription_details_title">Cancel subscription</string>
    <string name="cancel_subscription_details_sub_header"> We’re sorry to see you go.</string>
    <string name="cancel_subscription_error_info">fields marked * are required</string>
    <string name="cancel_subscription_details_cancellation_date">Cancellation date</string>
    <string name="cancel_subscription_details_cancellation_date_error">Cancellation date*</string>
    <string name="cancel_subscription_details_cancellation_reason_label">Cancellation reason</string>
    <string name="cancel_subscription_details_cancellation_reason">Please specify your cancellation reason</string>
    <string name="cancel_subscription_dialog_title">Are you sure you want to cancel your subscription?</string>
    <string name="cancel_subscription_dialog_content">Your service will end on %1$s,
    and you will not have access to internet after that date.</string>
    <string name="cancel_subscription_dialog_keepservice">KEEP SERVICE</string>
    <string name="cancel_subscription_dialog_cancel">CANCEL SERVICE</string>
    <string name="removed_devices">Removed devices</string>
    <string name="devices_tap_restore_access">tap to restore access</string>
    <string name="view_my_dashboard">View my dashboard</string>
    <string name="add_appointment_to_calendar">Add appointment to calendar</string>
    <string name="appointment_confirmed_header">Your technician will arrive on  %1$s between %2$s - %3$s.</string>
    <string name="appointment_confirmed_message">Someone over the age of 18 must be present for the installation.\n\nIf you need to modify or cancel your installation date, view your dashboard. </string>
    <string name="contact_info_label">Contact information</string>
    <string name="contact_info_first_name_label">First name</string>
    <string name="contact_info_last_name_label">Last name</string>
    <string name="contact_info_email_label">Email</string>
    <string name="contact_info_phone_number">Phone number</string>
    <string name="enter_valid_phone_number_error">Please enter a valid phone number</string>
    <string name="restarting_modem_help">Having some issues? Restarting your modem may help.</string>
</resources>